; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43legacy/extr_debugfs.c_ucode_regs_read_file.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43legacy/extr_debugfs.c_ucode_regs_read_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.b43legacy_wldev = type { i32 }

@.str = private unnamed_addr constant [14 x i8] c"r%d = 0x%04x\0A\00", align 1
@B43legacy_SHM_WIRELESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.b43legacy_wldev*, i8*, i64)* @ucode_regs_read_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ucode_regs_read_file(%struct.b43legacy_wldev* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.b43legacy_wldev*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.b43legacy_wldev* %0, %struct.b43legacy_wldev** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  store i32 0, i32* %7, align 4
  store i32 0, i32* %8, align 4
  br label %9

9:                                                ; preds = %19, %3
  %10 = load i32, i32* %8, align 4
  %11 = icmp slt i32 %10, 64
  br i1 %11, label %12, label %22

12:                                               ; preds = %9
  %13 = load i32, i32* %8, align 4
  %14 = load %struct.b43legacy_wldev*, %struct.b43legacy_wldev** %4, align 8
  %15 = load i32, i32* @B43legacy_SHM_WIRELESS, align 4
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @b43legacy_shm_read16(%struct.b43legacy_wldev* %14, i32 %15, i32 %16)
  %18 = call i32 @fappend(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %13, i32 %17)
  br label %19

19:                                               ; preds = %12
  %20 = load i32, i32* %8, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %8, align 4
  br label %9

22:                                               ; preds = %9
  %23 = load i32, i32* %7, align 4
  ret i32 %23
}

declare dso_local i32 @fappend(i8*, i32, i32) #1

declare dso_local i32 @b43legacy_shm_read16(%struct.b43legacy_wldev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
